# vkPhysics

./: .gdb_history  .gitignore  .gitmodules  .projectile  CMakeLists.txt  LICENSE  README.md  player.animations  player.mesh  todo.txt
assets/: .server_meta  .user_meta
assets/font/: atarian.fnt  consolas.fnt  fixedsys.fnt  liberation_mono.fnt  menlo.fnt
assets/maps/: ice.map  map_names  math_land.map  nucleus.map
assets/models/: ball.mesh  bullet.mesh  player.animations  player.animations.link  player.mesh  player.skeleton  player_animations.fbx  player_walking.fbx
assets/sound/: convert.py
cmake/modules/: FindOpenAL.cmake
dependencies/lua/: lua.c  luac.c
dependencies/sha/: sha1.cpp
docs/: game.md  multiple_clients.md  project_structure.md  renderer.md  servers.md  setup_linux.md  setup_windows.md  tutorial.md
shaders/: atmosphere_scatter_cubemap_init.frag  atmosphere_scatter_cubemap_init.geom  build.bat  chunk_mesh.frag  chunk_mesh.geom  chunk_mesh.vert  chunk_mesh_shadow.vert  cubemap.frag  cubemap.vert  diffuse_ibl.frag  diffuse_ibl.geom  diffuse_ibl.vert  final.frag  final.vert  gauss_blur.frag  gauss_blur_k7.frag  gauss_blur_k9.frag  integral_lookup.frag  integral_lookup.vert  lighting.frag  lighting.vert  mesh.frag  mesh.geom  mesh.vert  mesh_alpha.frag  mesh_shadow.vert  morph.frag  morph.vert  morph_ball.geom  morph_ball_shadow.geom  morph_dude.geom  morph_dude_shadow.geom  motion_blur.frag  render_quad.frag  shadow.frag  skeletal.frag  skeletal.geom  skeletal.vert  skeletal_shadow.vert  specular_ibl.frag  (+13 more)
shaders/SPV/: atmosphere_scatter_cubemap_init.frag.spv  atmosphere_scatter_cubemap_init.geom.spv  atmosphere_scatter_cubemap_init.vert.spv  chunk_mesh.frag.spv  chunk_mesh.geom.spv  chunk_mesh.vert.spv  chunk_mesh_shadow.vert.spv  cubemap.frag.spv  cubemap.vert.spv  diffuse_ibl.frag.spv  diffuse_ibl.geom.spv  diffuse_ibl.vert.spv  final.frag.spv  final.vert.spv  gauss_blur.frag.spv  gauss_blur_k7.frag.spv  gauss_blur_k9.frag.spv  integral_lookup.frag.spv  integral_lookup.vert.spv  lighting.frag.spv  lighting.vert.spv  mesh.frag.spv  mesh.geom.spv  mesh.vert.spv  mesh_alpha.frag.spv  mesh_shadow.vert.spv  morph.frag.spv  morph.geom.spv  morph.vert.spv  morph_ball.geom.spv  morph_ball_shadow.geom.spv  morph_dude.geom.spv  morph_dude_shadow.geom.spv  motion_blur.frag.spv  render_quad.frag.spv  shadow.frag.spv  skeletal.frag.spv  skeletal.geom.spv  skeletal.vert.spv  skeletal_shadow.vert.spv  (+14 more)
source/: build.bat  debug.cpp  debug.hpp  e_core.cpp  e_events.cpp  e_internal.hpp  engine.hpp  i_core.cpp  imgui.ini  input.hpp  main.cpp  r_camera.cpp  r_core.cpp  r_environment.cpp  r_internal.hpp  r_lighting.cpp  r_mesh.cpp  r_pipeline.cpp  renderer.hpp  tools.hpp  w_core.cpp  world.hpp
source/audio/: al_context.cpp  al_context.hpp  al_load.cpp  al_load.hpp  al_play.cpp  al_play.hpp  al_sounddb.cpp  al_sounddb.hpp  al_source.cpp  al_source.hpp
source/client/: a_core.cpp  a_internal.hpp  ai.hpp  cl_event.cpp  cl_event.hpp  cl_frame.cpp  cl_frame.hpp  cl_game.cpp  cl_game.hpp  cl_game_events.cpp  cl_game_events.hpp  cl_game_interp.cpp  cl_game_interp.hpp  cl_game_predict.cpp  cl_game_predict.hpp  cl_game_spectate.cpp  cl_game_spectate.hpp  cl_main.cpp  cl_main.hpp  cl_net.cpp  cl_net.hpp  cl_net_meta.cpp  cl_net_meta.hpp  cl_net_receive.cpp  cl_net_receive.hpp  cl_net_send.cpp  cl_net_send.hpp  cl_render.cpp  cl_render.hpp  cl_render_chunk.cpp  cl_render_player.cpp  cl_render_premade_scene.cpp  cl_render_projectiles.cpp  cl_scene.cpp  cl_scene.hpp  cl_scene_debug.cpp  cl_scene_main.cpp  cl_scene_map_creator.cpp  cl_scene_play.cpp  cl_scene_transition.cpp  (+96 more)
source/common/: ]  allocators.cpp  allocators.hpp  chunk.cpp  chunk.hpp  constant.hpp  containers.hpp  event.cpp  event.hpp  events.cpp  files.cpp  files.hpp  game.cpp  game.hpp  game_packet.cpp  game_packet.hpp  hub_packet.cpp  hub_packet.hpp  log.cpp  log.hpp  map.cpp  map.hpp  math.hpp  meta.cpp  meta.hpp  meta_packet.cpp  meta_packet.hpp  net.cpp  net.hpp  player.cpp  player.hpp  project.hpp  serialiser.cpp  serialiser.hpp  socket.cpp  socket.hpp  string.hpp  t_types.hpp  team.cpp  team.hpp  (+9 more)
source/engine/: vkph.hpp  vkph_chunk.cpp  vkph_chunk.hpp  vkph_constant.hpp  vkph_event.hpp  vkph_event_data.hpp  vkph_events.cpp  vkph_events.hpp  vkph_map.hpp  vkph_physics.cpp  vkph_physics.hpp  vkph_physics_triangle_table.hpp  vkph_player.cpp  vkph_player.hpp  vkph_player_action.hpp  vkph_player_snapshot.hpp  vkph_projectile.cpp  vkph_projectile.hpp  vkph_projectile_tracker.hpp  vkph_state.cpp  vkph_state.hpp  vkph_team.cpp  vkph_team.hpp  vkph_terraform.hpp  vkph_triangle_table.cpp  vkph_triangle_table.hpp  vkph_voxel.cpp  vkph_voxel.hpp  vkph_weapon.cpp  vkph_weapon.hpp
source/game/: a_core.cpp  a_neat.cpp  ai.hpp  e_core.cpp  e_debug.cpp  e_event.cpp  e_fader.cpp  e_internal.hpp  engine.hpp  main.cpp  n_core.cpp  n_internal.hpp  n_packet.cpp  n_packet_io.cpp  n_socket.cpp  net.hpp  player.hpp  u_core.cpp  u_game_menu.cpp  u_hud.cpp  u_internal.hpp  u_main_menu.cpp  ui.hpp  w_actions.cpp  w_ai.cpp  w_chunk.cpp  w_chunks.cpp  w_core.cpp  w_event.cpp  w_internal.hpp  w_physics.cpp  w_player.hpp  w_players.cpp  w_render.cpp  w_startup.cpp  world.hpp
source/game_old/: a_core.cpp  a_neat.cpp  ai.hpp  e_internal.hpp  engine.hpp  main.cpp  n_core.cpp  n_internal.hpp  u_core.cpp  u_game_menu.cpp  u_main_menu.cpp  u_menu_layout.cpp  w_chunk_mesh.cpp  w_chunks.cpp  w_core.cpp  w_event.cpp  w_internal.hpp  w_players.cpp
source/hub/: main.cpp
source/net/: net_chunk_tracker.cpp  net_chunk_tracker.hpp  net_client_prediction.hpp  net_context.cpp  net_context.hpp  net_debug.hpp  net_game_client.hpp  net_game_server.hpp  net_meta.cpp  net_meta.hpp  net_packets.cpp  net_packets.hpp  net_socket.cpp  net_socket.hpp
source/renderer/: #r_core.cpp#  a_core.cpp  app_context.cpp  app_context.hpp  app_settings.cpp  app_settings.hpp  audio.hpp  i_android.cpp  i_core.cpp  input.hpp  r_camera.cpp  r_core.cpp  r_environment.cpp  r_font.cpp  r_internal.hpp  r_lighting.cpp  r_mesh.cpp  r_particles.cpp  r_pipeline.cpp  (+79 more)
tools/: log.txt
(+68 files in other folders)
